# Ballistic-Simulation-Engine

./: .gitignore  README.md  calibrate_v50.py  data_gen.py  eda.py  generate_all_graphs.py  generate_report_graphs.py  materials_config.json  physics_residuals.py  pinn_dataloader.py  plot_parity.py  pyproject.toml  references.bib  simulation.py  stage1_part1_johnson_cook.py  stage1_part2_cowper_symonds.py  stage1_part3_recht_ipson.py  train_pinn_demo.py  train_simple_nn.py
data_test/: test_test.parquet  test_train.parquet  test_val.parquet
models/: fcnn_baseline.pt  pinn_demo.pt
tests/: test_dataloader.py  test_materials.py  test_physics.py
