[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dmsrde-ballistic-pinn"
version = "1.0.0"
authors = [
  { name="Author", email="author@example.com" },
]
description = "A Physics-Informed Neural Network data generation and modeling suite for macroscopic ballistic penetration, developed at DRDO."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "numba>=0.57",
    "torch>=2.0",
    "matplotlib>=3.7",
    "pytest>=7.0"
]

[project.urls]
"Homepage" = "https://github.com/username/dmsrde-ballistic-pinn"
"Bug Tracker" = "https://github.com/username/dmsrde-ballistic-pinn/issues"
